# PixelClicker

./: .gitignore  .gitlab-ci.yml  C2.puml  README.md  Vorlage_Personas.pptx  build.gradle.kts  docker-compose.yml  package-lock.json  settings.gradle.kts
.github/workflows/: main.yml
Clicker-Backend/: Cargo.toml
Clicker-Backend/src/: main.rs
Clicker-Frontend/: .gitignore  package-lock.json
Clicker-Frontend/src/: App.module.css  App.tsx
clicker_backend/: .env  .gitignore  Cargo.toml  Dockerfile  docker-entrypoint.sh
clicker_backend/cert/: xms-dev.com.key  xms-dev.com.pem
clicker_backend/postgres/: create.sh  create_tables.sql
clicker_backend/shared_volume/: game_messages.ts
clicker_backend/src/: events.rs  game_events.rs  game_messages.rs  game_state.rs  main.rs  password_management.rs  server.rs  sql_queries.rs  startup.rs  typescript_gen.rs  typescript_gen_bin.rs  unit_tests.rs
clicker_frontend/: Dockerfile  README.md  docker-entrypoint.sh  game_messages.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
clicker_frontend/features/: test.feature  test_coockbook.feature  test_mining.feature  test_pvp.feature  test_signup.feature
clicker_frontend/features/step_definitions/: test.js  test_cookbook.js  test_mining.js  test_pvp.js  test_signup.js
clicker_frontend/features/support/: env.js
clicker_frontend/src/: App.module.css  App.tsx  ClickerRoyaleGame.ts  ClickerRoyaleScene.ts  game.ts
clicker_frontend/src/prefabs/: GameText.ts  Generator.ts
clicker_frontend/src/scenes/: boot.ts  menu.ts  play.ts  preload.ts
clicker_frontend/src/styles/: Display.module.css  Leaderboard.module.css  Mining.module.css  PvP.module.css  Shop.module.css
clicker_proxy/: Dockerfile  nginx.conf
docs/: C1.puml
docs/old/: C1.puml  C2.puml
docs/pitch/: Skript.md
src/main/kotlin/: Main.kt
src/test/kotlin/: KtTest.kt
