[package]
name = "Clicker-Backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typescript-type-def = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.5", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3", features = ["cors"] }
