[package]
name = "clicker_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws"] }
axum-auth = "0.3.0"
axum_database_sessions = "4.0.0"
axum_sessions_auth = "4.0.0"
dashmap = "5.4.0"
typescript-type-def = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3", features = ["cors"] }
sqlx = { version = "0.6.2", features = ["json"] }
