[package]
name = "clicker_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.1", features = ["ws"] }
axum-auth = "0.4.0"
axum_database_sessions = { version = "5.0.0" }
axum_sessions_auth = "5.0.0"
dashmap = "5.4.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["json", "chrono"] }
tokio = { version = "1.23", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
typescript-type-def = "0.5.4"
argon2 = "0.4.1"
rand_core = { version = "0.6.4", features = ["std"] }
regex = "1"
rustrict = "0.5.8"
